Fix mobile z-index issue: ensure navbar appears above footer on mobile

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -465,6 +465,8 @@ footer {
     width: 100%;
     padding-left: 1em;
     padding-right: 1em;
+    // On mobile, footer should be below navbar
+    z-index: $navbar-zindex - 1;
   }
 }
 
